# arena_interface_python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.org  RELEASING.md  codemeta.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
.metadata/: LICENSE  Makefile  metadata.org
.metadata/docker/: Dockerfile  Dockerfile.dev
.metadata/emacs/: init.el
.metadata/guix/: channels.scm  guix.scm
arena_host/: __about__.py  __init__.py  arena_host.py  cli.py
arena_interface/: __about__.py  arena_interface.py  bench.py  cli.py
panels_controller_client/: __about__.py  __init__.py  cli.py  panels_controller_client.py
scripts/: bench_matrix.py  perf_summary.py
src/arena_interface/: __about__.py  __init__.py  __main__.py  arena_interface.py  cli.py  perf_summary.py  perf_summary_cli.py
tests/: test_bench_cleanup.py  test_bench_metadata.py  test_cli.py  test_packaging_metadata.py
tools/: quantum_leaps_tools.py
