[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "arena_interface"
version = "6.0.0"
description = "Python interface to the Reiser lab ArenaController."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Peter Polidoro", email = "peter@polidoro.io" }]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "click>=8.1",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.11",
]

[project.urls]
Homepage = "https://github.com/janelia-python/arena_interface_python"
Repository = "https://github.com/janelia-python/arena_interface_python"
Firmware = "https://github.com/janelia-arduino/ArenaController"

[project.scripts]
arena-interface = "arena_interface.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pixi.workspace]
name = "arena-interface-python"
version = "5.1.0"
description = "Python interface and benchmark tooling for ArenaController."
authors = ["Peter Polidoro <peter@polidoro.io>"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
git = "*"

[tool.pixi.pypi-dependencies]
arena_interface = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
python = "python"
help = "arena-interface --help"
all-off = "arena-interface all-off"
all-on = "arena-interface all-on"
format = "ruff format ."
lint = "ruff check ."
test = "pytest"
check = [{ task = "lint" }, { task = "test" }]
build = "python -m build"
archive = "git archive --format=zip --output=../arena_interface_python.zip HEAD"
qtools-install = "python tools/quantum_leaps_tools.py qtools-install"
qspy = "python tools/quantum_leaps_tools.py qspy"
bench = "arena-interface bench"
bench-full = "arena-interface bench --stream-path patterns/pat0004.pat"
bench-smoke = "arena-interface bench --cmd-iters 250 --spf-seconds 2 --stream-path patterns/pat0004.pat --stream-seconds 2"
bench-persistent = "arena-interface bench --cmd-connect-mode persistent"
bench-new-connection = "arena-interface bench --cmd-connect-mode new_connection"
bench-no-quickack = "arena-interface --no-tcp-quickack bench"
bench-no-nodelay = "arena-interface --no-tcp-nodelay bench"
bench-no-latency-tuning = "arena-interface --no-tcp-nodelay --no-tcp-quickack bench"
bench-socket-matrix = "python scripts/bench_matrix.py"

[tool.pixi.target.linux-64.dependencies]
make = "*"
c-compiler = "*"

[tool.pixi.target.osx-64.dependencies]
make = "*"
c-compiler = "*"

[tool.pixi.target.osx-arm64.dependencies]
make = "*"
c-compiler = "*"
