[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-interface"
dynamic = ["version"]
description = "Python interface and CLI for the Reiser Lab ArenaController."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Peter Polidoro", email = "peter@polidoro.io" }]
keywords = ["arena", "arenacontroller", "cli", "ethernet", "serial"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.11",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/janelia-python/arena_interface_python"
Repository = "https://github.com/janelia-python/arena_interface_python"
Issues = "https://github.com/janelia-python/arena_interface_python/issues"
Changelog = "https://github.com/janelia-python/arena_interface_python/blob/main/CHANGELOG.md"
Firmware = "https://github.com/janelia-arduino/ArenaController"

[project.scripts]
arena-interface = "arena_interface.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "arena_interface.__about__.__version__" }

[tool.setuptools.package-data]
arena_interface = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["arena_interface*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pixi.workspace]
name = "arena-interface-python"
version = "7.0.0"
description = "Python interface and benchmark tooling for ArenaController."
authors = ["Peter Polidoro <peter@polidoro.io>"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
git = "*"

[tool.pixi.pypi-dependencies]
"arena-interface" = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
python = "python"
help = "arena-interface --help"
all-off = "arena-interface all-off"
all-on = "arena-interface all-on"
format = "ruff format ."
lint = "ruff check ."
test = "pytest"
check = [{ task = "lint" }, { task = "test" }]
build = "python -m build"
check-dist = "python -m twine check dist/*"
release-check = [{ task = "check" }, { task = "build" }, { task = "check-dist" }]
archive = "git archive --format=zip --output=../arena_interface_python.zip HEAD"
qtools-install = "python tools/quantum_leaps_tools.py qtools-install"
qspy = "python tools/quantum_leaps_tools.py qspy"
bench = "arena-interface bench"
bench-full = "arena-interface bench --stream-path patterns/pat0004.pat"
bench-smoke = "arena-interface bench --cmd-iters 250 --spf-seconds 2 --stream-path patterns/pat0004.pat --stream-seconds 2"
bench-persistent = "arena-interface bench --cmd-connect-mode persistent"
bench-new-connection = "arena-interface bench --cmd-connect-mode new_connection"
bench-no-quickack = "arena-interface --no-tcp-quickack bench"
bench-no-nodelay = "arena-interface --no-tcp-nodelay bench"
bench-no-latency-tuning = "arena-interface --no-tcp-nodelay --no-tcp-quickack bench"
bench-socket-matrix = "python scripts/bench_matrix.py"

[tool.pixi.target.linux-64.dependencies]
make = "*"
c-compiler = "*"

[tool.pixi.target.osx-64.dependencies]
make = "*"
c-compiler = "*"

[tool.pixi.target.osx-arm64.dependencies]
make = "*"
c-compiler = "*"
